<resources>
    <string name="app_name">Cardápio Online</string>
    <string name="header_title">Cardápio Online</string>

    <string name="text_appetizer">Entradas</string>
    <string name="text_main_course">Pratos Principais</string>
    <string name="text_drinks">Bebidas</string>
    <string name="text_dessert">Sobremesas</string>

    <string name="text_preferences">Preferências do cliente</string>
    <string name="edit_text_preferences_hint">Quero um limão!</string>

    <string name="label_total_price">Total</string>
    <string name="text_total_price">R$ 0,00</string>
    <string name="label_total_time">Tempo Estimado</string>
    <string name="text_total_time">0 minutos</string>
    <string name="button_checkout">Finalizar Pedido</string>
</resources>