<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stone_100"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="28dp"
            android:paddingTop="32dp"
            android:paddingBottom="220dp">

            <TextView
                android:id="@+id/text_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/header_title"
                android:textColor="@color/stone_950"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_appetizer_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_appetizer"
                android:textAllCaps="true"
                android:textColor="@color/stone_600" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_appetizer_options"
                android:layout_width="match_parent"
                android:layout_height="336dp"
                android:overScrollMode="never" />

            <TextView
                android:id="@+id/text_main_course_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_main_course"
                android:textAllCaps="true"
                android:textColor="@color/stone_600" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_main_course_options"
                android:layout_width="match_parent"
                android:layout_height="336dp"
                android:overScrollMode="never" />

            <TextView
                android:id="@+id/text_drinks_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_drinks"
                android:textAllCaps="true"
                android:textColor="@color/stone_600" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_drinks_options"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:overScrollMode="never" />

            <TextView
                android:id="@+id/text_dessert_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_dessert"
                android:textAllCaps="true"
                android:textColor="@color/stone_600" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_dessert_options"
                android:layout_width="match_parent"
                android:layout_height="336dp"
                android:overScrollMode="never" />

            <TextView
                android:id="@+id/text_preferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_preferences"
                android:textAllCaps="true"
                android:textColor="@color/stone_600" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="false"
                android:background="@drawable/preferences_edit_text_background"
                android:hint="@string/edit_text_preferences_hint"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textColor="@color/stone_950"
                android:textColorHint="@color/stone_600"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/checkout_tab_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="32dp">

        <TextView
            android:id="@+id/label_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/label_total_price"
            android:textAllCaps="true"
            android:textColor="@color/stone_600"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_total_price"
            android:textAllCaps="true"
            android:textColor="@color/stone_950"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label_total_price" />

        <TextView
            android:id="@+id/label_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/label_total_time"
            android:textAllCaps="true"
            android:textColor="@color/stone_600"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_total_price" />

        <TextView
            android:id="@+id/text_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_total_time"
            android:textAllCaps="true"
            android:textColor="@color/stone_950"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label_total_time" />

        <Button
            android:id="@+id/button_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/checkout_button_background"
            android:fontFamily="@font/roboto_medium"
            android:paddingVertical="16dp"
            android:text="@string/button_checkout"
            android:textAllCaps="true"
            android:textColor="@color/stone_800"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/label_total_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>